--- a/package.json
+++ b/package.json
@@ -13,17 +13,19 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/node": "18.11.18",
+    "aws-cdk": "2.64.0",
     "jest": "^29.4.1",
     "ts-jest": "^29.0.5",
-    "aws-cdk": "2.64.0",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.5"
   },
   "dependencies": {
     "aws-cdk-lib": "2.64.0",
     "constructs": "^10.0.0",
+    "express": "^4.18.2",
     "source-map-support": "^0.5.21"
   }
 }
